frontend/test/should_fail/computations_if_else_003.grg
rule buh(var x:int)
{
	modify {
		eval {
			if(x==1) {
				x = 1;
			} else {
				x = 2;
			} else {
				x = 3;
			}
		}
	}
}

